--- a/novas aulas javascript/JavaScript web/8-alterando textos.html
+++ b/novas aulas javascript/JavaScript web/8-alterando textos.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>getElementByClass</title>
+    <title>querySelectorAll</title>
 </head>
 <body>
     <h1>JavaScript</h1>
-    <input id="main-input" placeholder="Digite Aqui:">
-    <p class="paragraph-js">Comecando nossa jornada para aprender</p>
-    <p class="paragraph-js"> A linguagem de programação mais versatil do mundo</p>
+    <input id="main-input" placeholder="Digite Aqui:" name="nome-completo">
+    <p>Comecando nossa jornada para aprender</p>
+    <p class="paragraph-js"> A linguagem de <b>programação</b> mais versatil do mundo</p>
     <button class="main-button">Clique aqui</button>
 </body>
-<script src="./2-getElementByClasss.js"></script>
+<script src="./alterando textos.js"></script>
 <style>
 h1{
     color: blue;
+}
+
+p{
+    visibility: hidden;
 }
 
 button{
